--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@google/genai": "1.34.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "@vitejs/plugin-react": "^5.1.2",
-    "vite": "^7.3.0"
+    "vite": "^7.3.0",
+    "@vitejs/plugin-react": "^5.1.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
